@@ -1,0 +1,8 @@
+Title: LDAP: Various small improvements for handling the LDAP user connector
+Level: 1
+Component: wato
+Version: 1.2.3i7
+Date: 1384777799
+Class: fix
+
+
