@@ -46,6 +46,7 @@
     * 0212 FIX: Fixed loading of sites with configured tcp socket in WATO
     * 0095 FIX: Fixed problem with portnumber in Wato Distributed Monitoring dialog
     * 0096 FIX: Fixed exception in wato
+    * 0213 FIX: LDAP: Various small improvements for handling the LDAP user connector
 
     Notifications:
     * 0005 Added notification script for sending SMS via mobilant.com...
